@@ -4,6 +4,7 @@ Bug fixes:
 - #6900 Remaining SonarCloud reported bug items
 - #6903 Save global settings
 - #6889 Systray Icon on Ubuntu Auto Start (take 2)
+- #6907 Saving configuration on apply
 - #6914 Fix for Qt Word Wrap on Mac
 - #6920 Windows Installer checksums
 - #6921 Handling pre-main window creation status notifications
@@ -16,6 +17,7 @@ Enhancements:
 - #6916 Main Window receives screen name change
 - #6910 Don't use the word “Version” for release names because it can lead to errors during update checking.
 - #6918 Removing positional union initialisation
+
 
 v1.13.0-stable
 ===========
